# SYNDistortionModule

./: .gitignore  CMakeLists.txt  README.md
source/: ClipperBase.h  NonInvertingOpAmpClipper.h  ParameterIds.h  ParameterReferences.h  PluginProcessor.cpp  PluginProcessor.h
